# germany-hydrology

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: app.js  hbv.js  index.html
docs/data/: basins_de.geojson  camels_DE110540.json  camels_DE210910.json  camels_DE811350.json  camels_DE811800.json  camels_DED11840.json  camels_DEF11770.json
examples/: basin_explorer.ipynb  hbv_calibration.ipynb  quickstart.ipynb
src/earthkit_data_hydrology_germany/: __init__.py  common.py  dwd.py
src/germany_hydrology/: __init__.py  buek.py  camels.py  common.py  dem.py  dwd_grids.py  era5.py  hbv.py  hydrosheds.py  landcover.py  network.py  pegelonline.py  signatures.py
tests/: test_hbv.py  test_offline.py  test_tools.py
webapp/: app.py  requirements.txt
webapp/assets/: style.css
webapp/data/: camels_DE912140.json  camels_DEG10250.json  camels_examples.json
