[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "earthkit-data-hydrology-germany"
version = "0.1.0"
description = "earthkit-data source plugins for German hydrology: ERA5 time series, DWD climate observations, PEGELONLINE river gauges, HydroSHEDS basins/rivers, BGR soil map"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Shahab Aldin Shojaeezadeh" }]
keywords = ["earthkit", "hydrology", "germany", "dwd", "era5", "pegelonline", "hydrosheds", "buek", "catchments"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "earthkit-data>=1.0",
    "pandas>=1.5",
    "geopandas>=0.14",
    "pyproj>=3.3",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/Bluerrror/earthkit-data-hydrology-germany"

[project.entry-points."earthkit.data.sources"]
era5-timeseries = "earthkit_data_hydrology_germany.era5:Era5TimeseriesSource"
dwd-observations = "earthkit_data_hydrology_germany.dwd:DwdObservationsSource"
pegelonline = "earthkit_data_hydrology_germany.pegelonline:PegelonlineSource"
hydrosheds = "earthkit_data_hydrology_germany.hydrosheds:HydroshedsSource"
buek1000 = "earthkit_data_hydrology_germany.buek:Buek1000Source"

[tool.setuptools.packages.find]
where = ["src"]
