[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "germany-hydrology"
version = "0.2.0"
description = "earthkit-data source plugins for German hydrology: ERA5 time series, DWD climate observations, PEGELONLINE river gauges, HydroSHEDS basins/rivers, BGR soil map"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Shahab Aldin Shojaeezadeh" }]
keywords = ["earthkit", "hydrology", "germany", "dwd", "era5", "pegelonline", "hydrosheds", "buek", "catchments"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "earthkit-data>=1.0",
    "pandas>=1.5",
    "geopandas>=0.14",
    "pyproj>=3.3",
    "rioxarray>=0.13",
    "h5netcdf>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=7"]
models = ["optuna>=3"]

[project.urls]
Homepage = "https://github.com/Bluerrror/germany-hydrology"

[project.entry-points."earthkit.data.sources"]
era5-timeseries = "germany_hydrology.era5:Era5TimeseriesSource"
dwd-observations = "germany_hydrology.dwd:DwdObservationsSource"
dwd-grids = "germany_hydrology.dwd_grids:DwdGridsSource"
pegelonline = "germany_hydrology.pegelonline:PegelonlineSource"
hydrosheds = "germany_hydrology.hydrosheds:HydroshedsSource"
buek1000 = "germany_hydrology.buek:Buek1000Source"
copernicus-dem = "germany_hydrology.dem:CopernicusDemSource"
worldcover = "germany_hydrology.landcover:WorldCoverSource"
camels-de = "germany_hydrology.camels:CamelsDeSource"

[tool.setuptools.packages.find]
where = ["src"]
